# timeseries--cookbook

./: .gitignore  Readme.md  basics-01.ipynb  eg_1.csv  eg_2.csv  eg_3.csv  pd-and-ts.ipynb  pyproject.toml  reading_dates.ipynb
