[tool.poetry]
name = "timeseries-cookbook"
version = "0.1.0"
description = "Everthing Time Series"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
